# Convolution-Architectures-using-Systolic-Arrays

./: .gitignore  CMakeLists.txt  README.md
Depthwise_convolution/: array.h  pe.h
src/: array.h  array_wave.vcd  main.cpp  pe.h  sim  waveforms.vcd
src/depthwise + pointwise/: README.md  depthwise_tb  design.h  dilated_conv_tb  testbench.cpp
src/depthwise_convolution/: depthwise_conv.h  depthwise_conv_tb.cpp
src/dialted_convolution/: README.md  cmds.txt  dilated_conv.h  dilated_conv_tb  dilated_conv_tb.cpp  pe.h
src/grouped_convolution/: array.h  cmds.txt  grouped_conv.h  grouped_conv_tb  grouped_conv_tb.cpp  grouped_waveforms.vcd  pe.h
src/pointwise/: design.cpp  testbench.cpp
src/standard_convolution/: array.h  pe.h  standard_conv.h  standard_conv_tb.cpp
